--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,35 +1,43 @@
-<div class='col-lg-4 col-lg-offset-2'>
+<div class = "container">
+   <div class="row">
 
-			<% if @user == current_user %>
-				<h3><%= t('.mypagetitle') %></h3>
-			<% else %>
-			    <h3><%= @user.name %>さんのページ</h3>
-			<% end %>
+    			<div class='col-lg-4 col-lg-offset-2'>
 
-
-			<table class="table">
-				<tr><%= attachment_image_tag(@user, :profile_image, :fill, 100, 100, fallback: "no_image.jpg") %></tr>
-
-				<tr>
-					<th><%= t('.username') %></th>
-					<th><%= @user.nickname %></th>
-				</tr>
-
-				<tr>
-					<th><%= t('.country') %></th>
-					<th><%= @user.country_name %></th>
-			  </tr>
-
-			</table>
+						<% if @user == current_user %>
+							<h3><%= t('.mypagetitle') %></h3>
+						<% else %>
+						    <h3><%= @user.name %>さんのページ</h3>
+						<% end %>
 
 
-			<% if @user == current_user %>
-			 <%= link_to t('.edittitle'), edit_user_path(@user.id) %>
-			<% end %>
-			<%#= link_to "投稿一覧", edit_user_path(@user.id) %>
-			<% if @favorite_list.present? %>
-			<%= link_to t('.likedspots'), favorites_user_path(@favorite_list, user_id: @user) %>
-			<% else %>
-			<h5><%= t('.no_favorited') %></h5>
-			<% end %>
+						<table class="table">
+							<tr><%= attachment_image_tag(@user, :profile_image, :fill, 100, 100, fallback: "no_image.jpg") %></tr>
+
+							<tr>
+								<th><%= t('.username') %></th>
+								<th><%= @user.nickname %></th>
+							</tr>
+
+							<tr>
+								<th><%= t('.country') %></th>
+								<th><%= @user.country_name %></th>
+						  </tr>
+
+						</table>
+
+
+						<% if @user == current_user %>
+						 <%= link_to t('.edittitle'), edit_user_path(@user.id) %>
+						<% end %>
+						<%#= link_to "投稿一覧", edit_user_path(@user.id) %>
+						<% if @favorite_list.present? %>
+						<%= link_to t('.likedspots'), favorites_user_path(@favorite_list, user_id: @user) %>
+						<% else %>
+						<h5><%= t('.no_favorited') %></h5>
+						<% end %>
+					</div>
+
+			 <div class ="col-lg-6">
+       </div>
+     </div>
 </div>
