--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,3 @@
-<footer class="navbar-footer">
-  <p class="text-center">©hona.work</p>
-</footer>
+    <footer class="footer d-flex justify-content-center align-items-end">
+      <!--<p class="text-center">©hona.work</p>-->
+    </footer>
