Add unsufficient code

--- a/app/views/users/favorites.html.erb
+++ b/app/views/users/favorites.html.erb
@@ -1,7 +1,7 @@
 <div class = "container">
     <div class="row">
 
-    <div class='col-lg-4 col-lg-offset-2'>
+    <div class='col-lg-5 col-lg-offset-1'>
         <h3><%= t('.favoritesindex') %></h3>
         <table>
           <tbody>
@@ -12,6 +12,9 @@
           </tbody>
         <% end %>
         </table>
+    </div>
+
+    <div class ="col-lg-6">
     </div>
     </div>
 </div>
