--- a/app/views/maps/show.html.erb
+++ b/app/views/maps/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
 
-    <div class='col-xs-9'>
+    <div class='col-lg-8 col-lg-offset-1'>
         <h1><%= @map.spotname %></h1>
 
          <!--<div class = "hashtag-circle">-->
@@ -98,7 +98,7 @@
 
 
 
-        <div class='col-xs-3'>
+        <div class='col-lg-3'>
           <div class="commentnew">
             <h4><%= t('.newcomment') %></h4>
             <%= render 'maps/form', map: @map, comment: @comment %>
