--- a/app/views/maps/index.html.erb
+++ b/app/views/maps/index.html.erb
@@ -1,2 +1,11 @@
+<div class="container">
+  <div class="row">
 
-<%= render 'maps/map', maps: @maps, map: @map %>
+    <div class='col-lg-10 col-lg-offset-1'>
+      <%= render 'maps/map', maps: @maps, map: @map %>
+    </div>
+    <div class ="col-lg-1">
+    </div>
+
+  </div>
+</div>
