--- a/app/views/maps/country.html.erb
+++ b/app/views/maps/country.html.erb
@@ -11,7 +11,7 @@
             <p>まだいいねされたスポットはありません。</p>
           <% else %>
             <% @country_ranks[country].each do |map| %>
-              <div><%= link_to map.spotname, map_path(map.id)%></div>
+              <div><%= link_to map.spotname, map_path(map.id), class: "cp_link"%></div>
             <% end %>
           <% end %>
 
