--- a/app/views/maps/top.html.erb
+++ b/app/views/maps/top.html.erb
@@ -17,10 +17,12 @@
          </div>
          <div class="col-lg-4">
 
-          <h2>First featurette heading. <span class="text-muted">It’ll blow your mind.</span></h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta
-            felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus,
-            tellus ac cursus commodo.</p>
+          <h2><%= t('.how_to_use') %> !!</h2>
+          <div class = "description">
+            <p class="lead">1.<%= t('.description') %></p>
+            <p class="lead">2.<%= t('.description2') %></p>
+            <p class="lead">3.<%= t('.description3') %></p>
+          </div>
          </div>
          <div class="col-lg-1">
          </div>
