--- a/app/views/maps/top.html.erb
+++ b/app/views/maps/top.html.erb
@@ -22,6 +22,8 @@
             <p class="lead">1.<%= t('.description') %></p>
             <p class="lead">2.<%= t('.description2') %></p>
             <p class="lead">3.<%= t('.description3') %></p>
+            <p class="lead">4.<%= t('.description4') %></p>
+            <p class="lead">5.<%= t('.description5') %></p>
           </div>
          </div>
          <div class="col-lg-1">
