Add color to submit

--- a/app/views/maps/_form.html.erb
+++ b/app/views/maps/_form.html.erb
@@ -49,7 +49,7 @@
     <% end %>
   </div></br>
   <div class="form-group">
-  <%= f.submit t('.submitcomment') %>
+  <%= f.submit t('.submitcomment'), class: "btn btn-success" %>
   </div>
   <!-- 評価javascript -->
   <script>
