--- a/app/views/maps/_map.html.erb
+++ b/app/views/maps/_map.html.erb
@@ -5,7 +5,7 @@
   <% end %>
 
   <input id="address" type="textbox" value="">
-  <input type="button" value=<%= t('.searchbutton') %> onclick="codeAddress()">
+  <input type="button" class= "btn btn-primary" value=<%= t('.searchbutton') %> onclick="codeAddress()">
 
    <% if user_signed_in? %><!-- 地図情報を保存するフォーム -->
   <%= form_with model: @map, local:true do |f| %>
