--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -47,7 +47,7 @@
 					</div>
 
 					<div class="actions">
-						<%= f.submit %>
+						<%= f.submit nil, class:"btn btn-success" %>
 					</div>
 
 				<% end %>
